<resources>
    <string name="app_name">Home Cook</string>
    <string name="main_btn_register">Register</string>
    <string name="main_btn_login">Log In</string>
    <string name="login_lbl_email">Email</string>
    <string name="login_lbl_password">Password</string>
    <string name="RegistionInformation">Registeration Information</string>
    <string name="login_btn_login">Login</string>
    <string name="loginPage_email">Please enter email</string>
    <string name="loginPage_password">Please enter password</string>
    <string name="registerPage_reEnterPw_title">Re-enter password:</string>
    <string name="registerPage_name_title">Name:</string>
    <string name="registerPage_btnSubmit">Submit</string>
    <string name="registerPage_emailInput">Please enter your email</string>
    <string name="registerPage_reEnterPwInput">Please re-enter password</string>
    <string name="registerPage_password_title">Password:</string>
    <string name="registerPage_password">Please enter password</string>
    <string name="registerPage_fullnameInput">Please enter Full Name</string>
    <string name="registerPage_email_title">E-mail:</string>
    <string name="home_categories_title">Categories</string>
    <string name="storelisting_merchants_result_title">Merchants Result</string>
    <string name="adApplication_Submit">Submit</string>
    <string name="btnPasswordUpdate">Update</string>
    <string name="btnReportSubmit">Submit</string>
    <string name="addproduct_pageTitle">Add new product</string>
    <string name="addproduct_ProductIDHint">Product ID</string>
    <string name="addproduct_ProductNameHint">Product Name:</string>
    <string name="addproduct_ProductQualtityHint">Product Quantity:</string>
    <string name="addproduct_ChangeOfIngredientsTitle">List of Ingredients</string>
    <string name="addproduct_DishNameTitle">Choose Food Type</string>
    <string name="addproduct_IngredientName">Name of Ingredients</string>
    <string name="addproduct_ProductDescription">Product Description:</string>
    <string name="addproduct_btnDeleteProduct">Delete the Product</string>
    <string name="adApplyForm_PageTitle">Advertisement Application Form</string>
    <string name="adApplyForm_MerchantIdHint">Merchant ID:</string>
    <string name="adApplyForm_MerchantNameHint">Merchant Name:</string>
    <string name="adApplyForm_SlotLocationTitle">Slot Location</string>
    <string name="adApplyForm_AdTitleHint">Ad Title:</string>
    <string name="adApplyForm_AdStartDateTitle">Ad Start Date</string>
    <string name="adApplyForm_AdStartDateFormatHint">date-month-year</string>
    <string name="adApplyForm_AdEndDateTitle">Ad End Date</string>
    <string name="adApplyForm_AdEndDateFormatHint">date-month-year</string>
    <string name="adApplyForm_AdDescriptionHint">Ad Description:</string>
    <string name="productListing_MerchantName">Merchant\'s Name</string>
    <string name="productListing_MerchantID">Merchant ID: {keyword}</string>
    <string name="productListing_MerchantStatus">Merchant Status: {keyword}</string>
    <string name="productListing_MerchantTotalProducts">Merchant\'s total products: {keyword}</string>
    <string name="userProfile_Username">{Name} Profile</string>
    <string name="userProfile_AccountType">profile_accountType</string>
    <string name="userProfile_UserID">UserID is:</string>
    <string name="userProfile_Username2">userName:</string>
    <string name="userProfile_UserEmail">email:</string>
    <string name="userProfile_regDate">RegDate:</string>
    <string name="userProfile_OldPasswordHInt">Old Password:</string>
    <string name="userProfile_ChangePasswordTitle">Change Password</string>
    <string name="userProfile_NewPasswordHint">New Password:</string>
    <string name="userProfile_ReportTitle">Report</string>
    <string name="userProfile_ReportCategoryTitle">Report Categories</string>
    <string name="userProfile_ReportTitleHint">Report Title:</string>
    <string name="userProfile_ReportDescriptionHint">Report Description:</string>
    <string name="merchantDashboard_PageTitle">Merchant\'s Dashboard</string>
    <string name="merchantDashboard_MerchantID">Merchant ID: {keyword}</string>
    <string name="merchantDashboard_MerchantStatus">Merchant Status: {keyword}</string>
    <string name="merchantDashboard_MerchantTotalProduct">Merchant\'s total products: {keyword}</string>
    <string name="merchantResult_SearchResult">There are XX results founded in {keyword}</string>
    <string name="viewholder_catTitle">TextView</string>
    <string name="viewholder_productName">TextView</string>
    <string name="editProduct_PageTitle">Edit the product</string>
    <string name="editProduct_ProductID">Product ID:</string>
    <string name="editProduct_ProductName">Product Name:</string>
    <string name="editProduct_ProductCategory">Product Category:</string>
    <string name="editProduct_ChangeOfIngredientsTitle">Changes of Ingredient:</string>
    <string name="editProduct_IngredientName">Name of Ingredient:</string>
    <string name="editProduct_ProductDescription">Product Desccription:</string>
    <string name="select_Image">Select Image</string>


</resources>